--- a/diamondveilfondo.css
+++ b/diamondveilfondo.css
@@ -55,13 +55,14 @@ html, body {
 
 
 .gradient-bg {
+  position: fixed;
   width: 100%;
   height: 100%;
-  position: fixed;
   overflow: hidden;
   background: linear-gradient(40deg, var(--color-bg1), var(--color-bg2));
   top: 0;
   left: 0;
+  z-index: -1;
 
   svg {
     position: fixed;
