--- a/diamondveilfondo.css
+++ b/diamondveilfondo.css
@@ -77,6 +77,10 @@ html, body {
     filter: url(#goo) blur(40px) ;
     width: 100%;
     height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    pointer-events: none;
   }
 
   .g1 {
