--- a/diamondveilfondo.css
+++ b/diamondveilfondo.css
@@ -1,178 +1,160 @@
 html, body {
-  font-family: 'Dongle', sans-serif;
-  margin: 0;
-  padding: 0;
+    font-family: 'Dongle', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 :root {
-  --color-bg1: rgb(108, 0, 162);
-  --color-bg2: rgb(0, 17, 82);
-  --color1: 18, 113, 255;
-  --color2: 139, 49, 236;
-  --color3: 93, 15, 191;
-  --color4: 41, 38, 148;
-  --color5: 156, 166, 247;
-  --color-interactive: 140, 100, 255;
-  --circle-size: 80%;
-  --blending: hard-light;
+    --color-bg1: #6c00a2; /* Color de fondo 1 en HEX */
+    --color-bg2: #001152; /* Color de fondo 2 en HEX */
+    --color-bg3: #001252; /* Color de fondo 2 en HEX */
+    --color1: #1271ff; /* Color 1 en HEX */
+    --color2: #8b31ec; /* Color 2 en HEX */
+    --color3: #5d0fbf; /* Color 3 en HEX */
+    --color4: #292694; /* Color 4 en HEX */
+    --color5: #9ca6f7; /* Color 5 en HEX */
+    --color-interactive: #8c64ff; /* Color interactivo en HEX */
+    --circle-size: 80%;
+    --blending: hard-light;
+}
+.fondo-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999; /* Asegura que esté por encima de todo */
+    pointer-events: none; /* Para que no bloquee interacciones */
+
+    background-image: url('https://imgur.com/mamd0Y0.png');
+    background-repeat: repeat; /* Repite la imagen */
+    background-size: 200px 200px; /* Ajusta el tamaño de repetición */
+    background-position: 0 0; /* Asegura que empiece desde la esquina superior izquierda */
+
+    /* Degradado más progresivo */
+    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0.6) 60%, rgba(0, 0, 0, 1) 90%);
+    -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0.6) 60%, rgba(0, 0, 0, 1) 90%);
 }
 
+
+
 @keyframes moveInCircle {
-  0% {
-    transform: rotate(0deg);
-  }
-  50% {
-    transform: rotate(180deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+    0% {
+        transform: rotate(0deg);
+    }
+    50% {
+        transform: rotate(180deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 @keyframes moveVertical {
-  0% {
-    transform: translateY(-50%);
-  }
-  50% {
-    transform: translateY(50%);
-  }
-  100% {
-    transform: translateY(-50%);
-  }
+    0% {
+        transform: translateY(-50%);
+    }
+    50% {
+        transform: translateY(50%);
+    }
+    100% {
+        transform: translateY(-50%);
+    }
 }
 
 @keyframes moveHorizontal {
-  0% {
-    transform: translateX(-50%) translateY(-10%);
-  }
-  50% {
-    transform: translateX(50%) translateY(10%);
-  }
-  100% {
-    transform: translateX(-50%) translateY(-10%);
-  }
+    0% {
+        transform: translateX(-50%) translateY(-10%);
+    }
+    50% {
+        transform: translateX(50%) translateY(10%);
+    }
+    100% {
+        transform: translateX(-50%) translateY(-10%);
+    }
 }
 
-
 .gradient-bg {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  background: linear-gradient(40deg, var(--color-bg1), var(--color-bg2));
-  top: 0;
-  left: 0;
-  z-index: -1;
-
-  svg {
     position: fixed;
-    top:0;
-    left:0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background: linear-gradient(40deg, var(--color-bg1), var(--color-bg2), var(--color-bg3));
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.gradient-bg svg {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 0;
     height: 0;
-  }
+}
 
-
-  .gradients-container {
-    filter: url(#goo) blur(40px) ;
+.gradients-container {
+    filter: url(#goo) blur(40px);
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
     pointer-events: none;
-  }
+}
 
-  .g1 {
+.gradients-container div {
     position: absolute;
-    background: radial-gradient(circle at center, rgba(var(--color1), 0.8) 0, rgba(var(--color1), 0) 50%) no-repeat;
+    background: radial-gradient(circle at center, var(--color) 0, transparent 50%) no-repeat;
     mix-blend-mode: var(--blending);
-
     width: var(--circle-size);
     height: var(--circle-size);
     top: calc(50% - var(--circle-size) / 2);
     left: calc(50% - var(--circle-size) / 2);
+    opacity: 0.8;
+}
 
+.g1 {
+    --color: var(--color1);
     transform-origin: center center;
     animation: moveVertical 30s ease infinite;
+}
 
-    opacity: 1;
-  }
-
-  .g2 {
-    position: absolute;
-    background: radial-gradient(circle at center, rgba(var(--color2), 0.8) 0, rgba(var(--color2), 0) 50%) no-repeat;
-    mix-blend-mode: var(--blending);
-
-    width: var(--circle-size);
-    height: var(--circle-size);
-    top: calc(50% - var(--circle-size) / 2);
-    left: calc(50% - var(--circle-size) / 2);
-
+.g2 {
+    --color: var(--color2);
     transform-origin: calc(50% - 400px);
     animation: moveInCircle 20s reverse infinite;
+}
 
-    opacity: 1;
-  }
-
-  .g3 {
-    position: absolute;
-    background: radial-gradient(circle at center, rgba(var(--color3), 0.8) 0, rgba(var(--color3), 0) 50%) no-repeat;
-    mix-blend-mode: var(--blending);
-
-    width: var(--circle-size);
-    height: var(--circle-size);
-    top: calc(50% - var(--circle-size) / 2 + 200px);
-    left: calc(50% - var(--circle-size) / 2 - 500px);
-
+.g3 {
+    --color: var(--color3);
     transform-origin: calc(50% + 400px);
     animation: moveInCircle 40s linear infinite;
+    top: calc(50% - var(--circle-size) / 2 + 200px);
+    left: calc(50% - var(--circle-size) / 2 - 500px);
+}
 
-    opacity: 1;
-  }
-
-  .g4 {
-    position: absolute;
-    background: radial-gradient(circle at center, rgba(var(--color4), 0.8) 0, rgba(var(--color4), 0) 50%) no-repeat;
-    mix-blend-mode: var(--blending);
-
-    width: var(--circle-size);
-    height: var(--circle-size);
-    top: calc(50% - var(--circle-size) / 2);
-    left: calc(50% - var(--circle-size) / 2);
-
+.g4 {
+    --color: var(--color4);
     transform-origin: calc(50% - 200px);
     animation: moveHorizontal 40s ease infinite;
-
     opacity: 0.7;
-  }
+}
 
-  .g5 {
-    position: absolute;
-    background: radial-gradient(circle at center, rgba(var(--color5), 0.8) 0, rgba(var(--color5), 0) 50%) no-repeat;
-    mix-blend-mode: var(--blending);
-
+.g5 {
+    --color: var(--color5);
     width: calc(var(--circle-size) * 2);
     height: calc(var(--circle-size) * 2);
     top: calc(50% - var(--circle-size));
     left: calc(50% - var(--circle-size));
-
     transform-origin: calc(50% - 800px) calc(50% + 200px);
     animation: moveInCircle 20s ease infinite;
+}
 
-    opacity: 1;
-  }
-
-  .interactive {
-    position: absolute;
-    background: radial-gradient(circle at center, rgba(var(--color-interactive), 0.8) 0, rgba(var(--color-interactive), 0) 50%) no-repeat;
-    mix-blend-mode: var(--blending);
-
+.interactive {
+    --color: var(--color-interactive);
     width: 100%;
     height: 100%;
     top: -50%;
     left: -50%;
-
-    opacity: 0.7;
-  }
 }
